--- a/index.Rmd
+++ b/index.Rmd
@@ -131,7 +131,7 @@ background-position: 0% 50%, 85% 30%, 85% 105%
 - Non-comparable reports
 
 <br><br><br><br><br><br><br><br><br><br><br>
-Examples: 
+Examples: Analyses for [California Ballot Propositions](https://vig.cdn.sos.ca.gov/2020/general/pdf/complete-vig.pdf)
 ]
 ]
 
